Ultra-aggressive iPhone gap fixes

--- a/src/index.css
+++ b/src/index.css
@@ -80,10 +80,9 @@
     overflow: hidden;
     /* Deep iPhone fixes */
     height: 100dvh;
-    height: -webkit-fill-available;
-    min-height: -webkit-fill-available;
+    min-height: 100dvh;
+    width: 100vw;
     position: fixed;
-    width: 100%;
     top: 0;
     left: 0;
     overscroll-behavior: none;
@@ -92,6 +91,29 @@
     user-select: none;
     /* Remove 300 ms tap delay on iOS */
     touch-action: manipulation;
+    background-color: #121215;
+  }
+
+  #root {
+    height: 100dvh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    background-color: #121215;
+  }
+
+  /* Force background to be dark everywhere */
+  html::after, body::after {
+    content: '';
+    position: fixed;
+    bottom: -50vh;
+    left: 0;
+    width: 100vw;
+    height: 50vh;
+    background-color: #121215;
+    z-index: -9999;
   }
 
   /* Re-enable selection inside inputs and textareas */
